<resources>
	<string name="app_name">FallDetector</string>

	<string name="retry">Retry</string>
	<string name="post_error">An error occurred while loading the posts</string>
	<string name="title_activity_menu">MenuActivity</string>
	<string name="action_settings">Settings</string>
	<string name="title_activity_navigation">NavigationActivity</string>

	<!--nav-->
	<string name="title_nav_home">Home</string>
	<string name="title_nav_contacts">My Contacts</string>
	<string name="title_nav_alarm">Alarm</string>
	<string name="title_nav_settings">Settings</string>
	<string name="title_nav_call">Call</string>
	<string name="title_nav_message">SMS</string>
	<string name="title_nav_more">More</string>
	<string name="title_nav_map">Map</string>

	<!--txt and btn-->
	<string name="txt_email_hint">Email</string>
	<string name="txt_mobile_hint">Mobile</string>
	<string name="txt_name_hint">Name</string>
	<string name="btn_cancel_text">Cancel</string>
	<string name="btn_apply_text">Apply</string>
	<string name="menu_communicate_str">Communicate</string>
	<string name="form_checkbox_txt">Set contact as my ICE</string>
	<string name="channel_name">Monitoring Service Channel</string>
	<string name="channel_description">Monitoring</string>
	<string name="notification_title">Monitoring Service</string>
	<string name="notification_message">App is monitoring your safety</string>
	<string name="ticker_text">Service toggled!</string>
	<string name="service_button">Service button</string>
	<string name="tv_dark_mode">Dark Mode</string>
	<string name="tv_send_sms_to_all_contacts">Send SMS to all contacts</string>
	<string name="tv_sensitivity">Chosen Sensitivity</string>
	<string name="btn_add_photo_tooltip">Click To Add Avatar</string>

	<string name="snackbar_deleted">Deleted contact</string>
	<string name="snackbar_undo">Undo</string>
	<string name="btn_save">save</string>
	<string name="fab_label">add contact</string>
	<string name="snb_updated">Contact updated.</string>
	<string name="snb_email_warning">You have to set email first</string>
	<string name="tv_no_contacts_yet">No Contacts Yet!</string>
	<string name="btn_reset">reset</string>
	<string name="tv_priority">ICE</string>
	<string name="txt_email_chooser">Send email via</string>
	<string name="bottom_dialog_title">Choose action</string>
	<string name="toast_photo_failed">Photo capture failed</string>
	<string name="toast_photo_success">Photo capture succeeded</string>

	<!--    lorem ipsum-->
	<string name="long_test_string">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\n
		Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</string>
	<string name="btn_attend">Attend</string>
	<string name="btn_leave">Leave</string>
    <string name="event_details_label">Event Details</string>
    <string name="text_attending_count">Attending: %1$d</string>

</resources>
