<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/icon_home"
                android:title="@string/title_nav_home"/>
        <item
                android:id="@+id/nav_contacts"
                android:icon="@drawable/icon_contacts"
                android:title="@string/title_nav_contacts"/>
        <item
                android:id="@+id/nav_alarm"
                android:icon="@drawable/icon_alarm"
                android:title="@string/title_nav_alarm"/>
        <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/icon_settings"
                android:title="@string/title_nav_settings"/>
    </group>

    <item android:title="@string/menu_communicate_str">
        <menu>
            <group android:checkableBehavior="single">
                <item
                        android:id="@+id/nav_call"
                        android:icon="@drawable/icon_call"
                        android:title="@string/title_nav_call"/>
                <item
                        android:id="@+id/nav_sms"
                        android:icon="@drawable/icon_sms"
                        android:title="@string/title_nav_message"/>
            </group>
        </menu>
    </item>

</menu>
