<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="viewModel"
                  type="com.example.bpawlowski.falldetector.presentation.activity.main.contacts.FormDialogViewModel"/>
    </data>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:background="@drawable/backgroud_rounded">

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_layout_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:errorEnabled="true"
                error="@{viewModel.nameError}">

            <EditText
                    android:id="@+id/txt_contact_name"
                    rxText="@{viewModel.nameSubject}"
                    android:maxLength="15"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_name_hint"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_layout_mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:errorEnabled="true"
                error="@{viewModel.mobileError}">
            <EditText
                    android:id="@+id/txt_contact_mobile"
                    rxText="@{viewModel.mobileSubject}"
                    android:maxLength="9"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_mobile_hint"
                    android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_layout_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:errorEnabled="true"
                error="@{viewModel.emailError}">
            <EditText
                    android:id="@+id/txt_contact_email"
                    rxText="@{viewModel.emailSubject}"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_email_hint"/>
        </com.google.android.material.textfield.TextInputLayout>
        <CheckBox
                android:id="@+id/cbx_ice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/form_checkbox_txt"/>
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">
            <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:text="@string/btn_cancel_text"
                    android:layout_gravity="start"/>

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_apply"
                    android:enabled="@{viewModel.dataValid}"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/btn_apply_text"
                    android:layout_gravity="end"/>
        </LinearLayout>
    </LinearLayout>
</layout>