<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="wrap_content"
        android:layout_width="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:paddingBottom="@dimen/margin_medium_16dp"
            android:paddingTop="@dimen/margin_medium_16dp">

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_start"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/margin_medium_16dp" />

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_end"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/margin_medium_16dp" />

        <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageProfile"
                android:layout_width="150dp"
                android:layout_height="150dp"
                style="@style/ProfileImageButton"
                android:src="@drawable/icon_contact"
                android:contentDescription="@string/btn_add_photo_tooltip"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintEnd_toEndOf="@id/guideline_end" />

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium_16dp"
                app:errorEnabled="true"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintTop_toBottomOf="@id/imageProfile">

            <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/textName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_name_hint"
                    android:inputType="textPersonName"
                    android:maxLength="20"
                    tools:text="Bogusz Pawlowski" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutMobile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_medium_16dp"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@+id/layoutName"
                tools:error="Mobile must have 9 digits">

            <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/textMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_mobile_hint"
                    android:inputType="phone"
                    android:maxLength="9"
                    tools:text="123213221" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@+id/layoutMobile">

            <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/textEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_email_hint"
                    android:inputType="textEmailAddress"
                    tools:text="bogusz.pawlowsi@gmail.com" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
                android:id="@+id/checkboxIce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/form_checkbox_txt"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@+id/layoutEmail" />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonCancel"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_cancel_text"
                android:textColor="@color/iconBackground"
                app:layout_constraintEnd_toStartOf="@id/buttonApply"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@+id/checkboxIce" />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonApply"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/btn_apply_text"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toEndOf="@id/buttonCancel"
                app:layout_constraintTop_toBottomOf="@+id/checkboxIce" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
